--- a/index.html
+++ b/index.html
@@ -499,7 +499,7 @@
     <section class="hero" id="hero">
       <div class="hero-header">
         <div class="hero-logo-col">
-          <img src="/images/Lazy_toad_site_logo_3.png" alt="Lazy Toad Studios Logo" class="hero-logo">
+          <img src="images/Lazy toad site logo 3.png" alt="Lazy Toad Studios Logo" class="hero-logo">
         </div>
         <div class="hero-nav-col">
           <div class="hero-nav-title">LAZY TOAD STUDIOS</div>
