--- a/index.html
+++ b/index.html
@@ -117,17 +117,17 @@
             min-height: 1.7em;
             vertical-align: middle;
             margin-right: 0.1em;
-            background-image: url(./images/toad_icon_static.png);
+            background-image: url(./images/toad icon static.png);
             background-size: contain;
             background-repeat: no-repeat;
             background-position: center;
             image-rendering: auto;
             transition: background-image 0.15s;
         }
-        .main-links a.shop:hover .icon    { background-image: url(./images/toad_shop.png); }
-        .main-links a.contact:hover .icon { background-image: url(./images/toad_mail.png); }
-        .main-links a.about:hover .icon   { background-image: url(./images/toad_about.png); }
-        .main-links a.work:hover .icon    { background-image: url(./images/toad_work.png); }
+        .main-links a.shop:hover .icon    { background-image: url(./images/toad shop.png); }
+        .main-links a.contact:hover .icon { background-image: url(./images/toad mail.png); }
+        .main-links a.about:hover .icon   { background-image: url(./images/toad about.png); }
+        .main-links a.work:hover .icon    { background-image: url(./images/toad work.png); }
 
         /* Marker-Style Separator lines (half thickness) */
         .nav-hero-separator,
