--- a/index.html
+++ b/index.html
@@ -579,9 +579,9 @@
             <!-- ...gallery as before... -->
             <div class="gallery-item">
                 <a href="gallery/after-the-war.html">
-                    <img src="images/after_the_war_gouache_11.jpg" alt="After the War">
+                    <img src="images/1 Joe Shenton - Respite.jpg" alt="After the War">
                     <div class="gallery-overlay">
-                        <div class="gallery-overlay-title">After the War</div>
+                        <div class="gallery-overlay-title">Respite</div>
                         <div class="gallery-overlay-meta">Gouache on paper · 2022</div>
                         <span class="gallery-overlay-view">View details</span>
                     </div>
@@ -589,7 +589,7 @@
             </div>
             <div class="gallery-item">
                 <a href="gallery/ptsd-machine.html">
-                    <img src="images/ptsd_machine_10.jpg" alt="PTSD Machine">
+                    <img src="images/4 Joe Shenton - Reflection" alt="PTSD Machine">
                     <div class="gallery-overlay">
                         <div class="gallery-overlay-title">PTSD Machine</div>
                         <div class="gallery-overlay-meta">Acrylic on canvas · 2023</div>
@@ -599,7 +599,7 @@
             </div>
             <div class="gallery-item">
                 <a href="gallery/transporter.html">
-                    <img src="/images/transporter_14.jpg" alt="Transporter">
+                    <img src="/images/2 Joe Shenton - Routine.jpg" alt="Transporter">
                     <div class="gallery-overlay">
                         <div class="gallery-overlay-title">Transporter</div>
                         <div class="gallery-overlay-meta">Digital illustration · 2021</div>
@@ -609,7 +609,7 @@
             </div>
             <div class="gallery-item">
                 <a href="gallery/ramen-battleship.html">
-                    <img src="/images/ramen_battleship_24.jpg" alt="Ramen Battleship">
+                    <img src="/images/3 Joe Shenton - Reunion.jpg alt="Ramen Battleship">
                     <div class="gallery-overlay">
                         <div class="gallery-overlay-title">Ramen Battleship</div>
                         <div class="gallery-overlay-meta">Watercolor · 2020</div>
@@ -619,7 +619,7 @@
             </div>
             <div class="gallery-item">
                 <a href="gallery/walking-temple.html">
-                    <img src="/images/walking_temple_website.jpg" alt="Quiet day at the beach. Cold, but beautiful">
+                    <img src="/images/walking temple website.jpg" alt="Quiet day at the beach. Cold, but beautiful">
                     <div class="gallery-overlay">
                         <div class="gallery-overlay-title">Quiet day at the beach</div>
                         <div class="gallery-overlay-meta">Digital painting · 2023</div>
@@ -629,7 +629,7 @@
             </div>
             <div class="gallery-item">
                 <a href="gallery/demons.html">
-                    <img src="./images/demons_website.jpg" alt="Waiting for the bus in the desert">
+                    <img src="./images/demons website.jpg" alt="Waiting for the bus in the desert">
                     <div class="gallery-overlay">
                         <div class="gallery-overlay-title">Waiting for the bus in the desert</div>
                         <div class="gallery-overlay-meta">Ink · 2022</div>
@@ -649,7 +649,7 @@
             </div>
             <div class="gallery-item">
                 <a href="gallery/osaka.html">
-                    <img src="./images/osaka_wesbite.jpg" alt="Canoeing again">
+                    <img src="./images/osaka wesbite.jpg" alt="Canoeing again">
                     <div class="gallery-overlay">
                         <div class="gallery-overlay-title">Canoeing again</div>
                         <div class="gallery-overlay-meta">Gouache · 2022</div>
@@ -659,7 +659,7 @@
             </div>
             <div class="gallery-item">
                 <a href="gallery/girl-train.html">
-                    <img src="./images/fisherman_website.jpg" alt="A girl, and a train passing">
+                    <img src="./images/fisherman website.jpg" alt="A girl, and a train passing">
                     <div class="gallery-overlay">
                         <div class="gallery-overlay-title">A girl, and a train passing</div>
                         <div class="gallery-overlay-meta">Mixed media · 2023</div>
