--- a/index.html
+++ b/index.html
@@ -541,16 +541,16 @@
       <!-- 4-IMAGE HERO ROW -->
       <div class="hero-image-row">
         <div class="hero-image-box" tabindex="0">
-          <img src="/images/after_the_war_gouache_11.jpg" alt="After the War" class="hero-image">
+          <img src="/images/1 Joe Shenton - Respite.jpg" alt="After the War" class="hero-image">
         </div>
         <div class="hero-image-box" tabindex="0">
-          <img src="./images/ramen_battleship_24.jpg" alt="Ramen Battleship" class="hero-image">
+          <img src="./images/3 Joe Shenton - Reunion.jpg" alt="Ramen Battleship" class="hero-image">
         </div>
         <div class="hero-image-box" tabindex="0">
-          <img src="/images/ptsd_machine_10.jpg" alt="PTSD Machine" class="hero-image">
+          <img src="/images/4 Joe Shenton - Reflection.jpg" alt="PTSD Machine" class="hero-image">
         </div>
         <div class="hero-image-box" tabindex="0">
-          <img src="/images/transporter_14.jpg" alt="Transporter" class="hero-image">
+          <img src="/images/2 Joe Shenton - Routine.jpg" alt="Transporter" class="hero-image">
         </div>
       </div>
       <div class="banner-images-spacing"></div>
@@ -639,7 +639,7 @@
             </div>
             <div class="gallery-item">
                 <a href="gallery/mountain.html">
-                    <img src="./images/mountain_website.jpg" alt="Nature again.. At its finest!">
+                    <img src="./images/mountain website.jpg" alt="Nature again.. At its finest!">
                     <div class="gallery-overlay">
                         <div class="gallery-overlay-title">Nature again.. At its finest!</div>
                         <div class="gallery-overlay-meta">Acrylic · 2021</div>
@@ -669,7 +669,7 @@
             </div>
             <div class="gallery-item">
                 <a href="gallery/closegirl.html">
-                    <img src="./images/wanderer_website.jpg" alt="What a beautiful day!">
+                    <img src="./images/wanderer website.jpg" alt="What a beautiful day!">
                     <div class="gallery-overlay">
                         <div class="gallery-overlay-title">What a beautiful day!</div>
                         <div class="gallery-overlay-meta">Digital · 2022</div>
