--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             display: flex;
             flex-direction: row;
             align-items: flex-end;
-            justify-content: space-between;
+            justify-content: flex-end; /* Move content to the right */
             margin-top: 36px;
             margin-bottom: 0;
             box-sizing: border-box;
@@ -38,6 +38,16 @@
             align-items: center;
             justify-content: flex-start;
             flex: 0 0 auto;
+            margin-right: 32px; /* Add some gap to right-side elements */
+        }
+        .logo-circle {
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            background: #fff;
+            border-radius: 50%;
+            padding: 18px;
+            box-shadow: 0 2px 12px 0 rgba(0,0,0,0.04);
         }
         .hero-logo {
             display: block;
@@ -69,7 +79,7 @@
         .hero-nav-title {
             font-size: 2.2rem;
             color: #fff;
-            margin: 0 0 4px 0;
+            margin: 0 0 14px 0;
             text-align: right;
             line-height: 1.1;
             text-transform: uppercase;
@@ -83,9 +93,9 @@
         }
         .main-links {
             display: flex;
-            gap: 36px;
+            gap: 18px;
             justify-content: flex-end;
-            margin-top: 14px;
+            margin-top: 0;
             margin-bottom: 0;
             padding: 0;
         }
@@ -94,20 +104,32 @@
             color: #444;
             text-decoration: none;
             opacity: 0.90;
-            transition: color 0.18s, opacity 0.18s;
+            transition: 
+                color 0.18s, 
+                opacity 0.18s, 
+                background 0.18s, 
+                border-color 0.18s, 
+                text-shadow 0.18s;
             font-weight: normal;
             display: flex;
-            align-items: flex-end;
+            align-items: center;
             gap: 0.5em;
-            padding: 2px 8px;
-            border-radius: 6px;
+            padding: 0.4em 1.6em;
+            border-radius: 20px;
+            border: 2px solid #fff;
+            background: none;
+            box-shadow: none;
+            margin: 0 0.1em;
         }
         .main-links a:hover,
         .main-links a:focus {
+            background: #fff;
             color: #181818;
+            border-color: #111;
             opacity: 1;
             text-decoration: none;
             filter: none;
+            text-shadow: none;
         }
         .main-links .icon {
             display: inline-block;
@@ -207,11 +229,23 @@
             .hero-header {
                 padding-left: 3vw;
                 padding-right: 3vw;
+                flex-direction: column;
+                align-items: stretch;
             }
-            .hero-nav-title {
-                font-size: 1.3rem;
+            .hero-logo-col {
+                justify-content: flex-start;
+                align-items: center;
+                width: 100%;
+                margin-bottom: 10px;
+            }
+            .logo-circle {
+                margin: 0 auto;
             }
             .hero-logo { height: 95px; }
+            .hero-nav-title {
+                font-size: 1.3rem;
+                margin-bottom: 10px;
+            }
             .main-links a { font-size: 0.9rem; }
             .main-links .icon { width: 1.2em; height: 1.2em; }
             .main-links { gap: 14px; margin-top: 8px;}
@@ -232,6 +266,9 @@
                 align-items: center;
                 width: 100%;
                 margin-bottom: 10px;
+            }
+            .logo-circle {
+                margin: 0 auto;
             }
             .hero-logo {
                 height: 54px;
@@ -254,6 +291,7 @@
                 gap: 8px;
                 font-size: 0.8rem;
                 margin-top: 10px;
+                margin-bottom: 0;
             }
             .main-links a { font-size: 0.8rem;}
             .main-links .icon {
@@ -496,7 +534,9 @@
     <section class="hero" id="hero">
       <div class="hero-header">
         <div class="hero-logo-col">
-          <img src="images/Lazy toad site logo 3.png" alt="Lazy Toad Studios Logo" class="hero-logo">
+          <div class="logo-circle">
+            <img src="images/Lazy toad site logo 3.png" alt="Lazy Toad Studios Logo" class="hero-logo">
+          </div>
         </div>
         <div class="hero-nav-col">
           <div class="hero-nav-title">LAZY TOAD STUDIOS</div>
