--- a/index.html
+++ b/index.html
@@ -26,19 +26,22 @@
             display: flex;
             flex-direction: row;
             align-items: flex-end;
-            justify-content: flex-end; /* Move content to the right */
+            justify-content: flex-end;
             margin-top: 36px;
             margin-bottom: 0;
             box-sizing: border-box;
             padding-left: 2vw;
             padding-right: 2vw;
+            position: relative;
         }
         .hero-logo-col {
             display: flex;
             align-items: center;
             justify-content: flex-start;
             flex: 0 0 auto;
-            margin-right: 32px; /* Add some gap to right-side elements */
+            margin-right: 32px;
+            /* move logo about 20% more to right using left margin */
+            margin-left: 10vw;
         }
         .logo-circle {
             display: flex;
@@ -68,6 +71,8 @@
             min-width: 0;
             min-height: 0;
             padding: 0;
+            /* move nav col further to the right */
+            margin-right: 8vw;
         }
         .hero-nav-title, 
         .main-links a, 
@@ -237,6 +242,7 @@
                 align-items: center;
                 width: 100%;
                 margin-bottom: 10px;
+                margin-left: 0;
             }
             .logo-circle {
                 margin: 0 auto;
@@ -251,6 +257,9 @@
             .main-links { gap: 14px; margin-top: 8px;}
             .hero-images-spacing, .banner-images-spacing { height: 22px; }
             .nav-hero-separator { margin-top: 6px; }
+            .hero-nav-col {
+                margin-right: 0;
+            }
         }
         @media (max-width: 700px) {
             .hero-header {
@@ -266,6 +275,7 @@
                 align-items: center;
                 width: 100%;
                 margin-bottom: 10px;
+                margin-left: 0;
             }
             .logo-circle {
                 margin: 0 auto;
@@ -278,6 +288,7 @@
                 justify-content: center;
                 width: 100%;
                 align-items: flex-end;
+                margin-right: 0;
             }
             .hero-nav-title {
                 text-align: right;
@@ -606,7 +617,6 @@
         </svg>
       </div>
     </section>
-
     <!-- Main Content (hidden until scroll or click) -->
     <section class="main-content hidden" id="mainContent">
         <div style="max-width: 700px; margin: 0px auto 0 auto; padding: 20px;">
@@ -719,7 +729,6 @@
             </div>
         </div>
     </section>
-
     <!-- Modal for full size images -->
     <div id="imgModal" class="modal" onclick="event.target === this && closeModal()">
         <div class="modal-content">
@@ -728,7 +737,6 @@
             <div id="modalCaption" class="modal-caption"></div>
         </div>
     </div>
-
     <!-- Social Footer -->
     <footer class="footer-social">
         <div class="footer-social-links">
@@ -753,7 +761,6 @@
             &copy; 2025 Lazy Toad Studios &mdash; Connect with us!
         </div>
     </footer>
-
     <script>
     function openModal(img) {
         var modal = document.getElementById('imgModal');
@@ -773,7 +780,6 @@
     document.addEventListener('keydown', function(e) {
         if(e.key === 'Escape') closeModal();
     });
-
     function scrollToMain() {
         document.getElementById('mainContent').classList.remove('hidden');
         window.scrollTo({ top: window.innerHeight + 1, behavior: 'smooth' });
