--- a/index.html
+++ b/index.html
@@ -22,7 +22,6 @@
         }
         .hero-header {
             width: 100vw;
-            max-width: 1200px;
             display: flex;
             flex-direction: row;
             align-items: flex-end;
@@ -31,7 +30,7 @@
             margin-bottom: 0;
             box-sizing: border-box;
             padding-left: 2vw;
-            padding-right: 6vw; /* Push nav/title further right */
+            padding-right: 4vw; /* natural margin from right edge */
             position: relative;
         }
         .hero-logo-col {
@@ -67,7 +66,7 @@
             min-width: 0;
             min-height: 0;
             padding: 0;
-            margin-right: 2vw; /* Fine-tune right spacing */
+            margin-right: 0;
         }
         .hero-nav-title, 
         .main-links a, 
@@ -93,7 +92,7 @@
         }
         .hero-nav-subtitle {
             font-family: 'Press Start 2P', cursive, monospace;
-            font-size: 1.2rem;
+            font-size: 2rem;
             color: #fff;
             text-align: right;
             margin-bottom: 14px;
@@ -120,12 +119,7 @@
             color: #444;
             text-decoration: none;
             opacity: 0.90;
-            transition: 
-                color 0.18s, 
-                opacity 0.18s, 
-                background 0.18s, 
-                border-color 0.18s, 
-                text-shadow 0.18s;
+            transition: color 0.18s, opacity 0.18s, background 0.18s, border-color 0.18s, text-shadow 0.18s;
             font-weight: normal;
             display: flex;
             align-items: center;
@@ -263,17 +257,12 @@
                 margin-bottom: 10px;
             }
             .hero-nav-subtitle {
-                font-size: 0.9rem;
+                font-size: 1.2rem;
                 margin-bottom: 10px;
             }
             .main-links a { font-size: 0.9rem; }
             .main-links .icon { width: 1.2em; height: 1.2em; }
             .main-links { gap: 14px; margin-top: 8px;}
-            .hero-images-spacing, .banner-images-spacing { height: 22px; }
-            .nav-hero-separator { margin-top: 6px; }
-            .hero-nav-col {
-                margin-right: 0;
-            }
         }
         @media (max-width: 700px) {
             .hero-header {
@@ -311,7 +300,7 @@
                 margin-top: 0;
             }
             .hero-nav-subtitle {
-                font-size: 0.7rem;
+                font-size: 0.85rem;
                 margin-bottom: 8px;
                 margin-top: -2px;
             }
@@ -329,14 +318,6 @@
                 min-width: 1.1em;
                 min-height: 1.1em;
             }
-            .nav-hero-separator, .banner-hero-separator {
-                width: 96vw;
-                max-width: 100vw;
-            }
-            .hero-images-spacing, .banner-images-spacing {
-                height: 14px;
-            }
-            .nav-hero-separator { margin-top: 4px; }
         }
         @media (max-width: 900px), (orientation: portrait) {
             .hero-image-row {
