--- a/index.html
+++ b/index.html
@@ -100,10 +100,9 @@
             margin-bottom: 14px;
             margin-top: -6px;
             letter-spacing: 0.04em;
-            text-shadow:
-                1px 1px 0 #111,
-                0px 2px 0 #111,
-                2px 0px 0 #111;
+            -webkit-text-stroke: 2px #111; /* true black outline */
+            text-stroke: 2px #111;
+            text-shadow: none;
         }
         .main-links {
             display: flex;
@@ -257,6 +256,8 @@
             .hero-nav-subtitle {
                 font-size: 1.2rem;
                 margin-bottom: 10px;
+                -webkit-text-stroke: 1.2px #111;
+                text-stroke: 1.2px #111;
             }
             .main-links a { font-size: 0.9rem; }
             .main-links .icon { width: 1.2em; height: 1.2em; }
@@ -302,6 +303,8 @@
                 font-size: 0.85rem;
                 margin-bottom: 8px;
                 margin-top: -2px;
+                -webkit-text-stroke: 1px #111;
+                text-stroke: 1px #111;
             }
             .main-links {
                 justify-content: flex-end;
