--- a/index.html
+++ b/index.html
@@ -93,14 +93,14 @@
                 -1px -1px 0 #111;
         }
         .hero-nav-subtitle {
-            font-family: 'PixelMplus10', 'Press Start 2P', monospace;
+            font-family: 'PixelMplus10', monospace !important;
             font-size: 2rem;
             color: #fff;
             text-align: right;
             margin-bottom: 14px;
             margin-top: -6px;
             letter-spacing: 0.04em;
-            -webkit-text-stroke: 2px #111; /* true black outline */
+            -webkit-text-stroke: 2px #111;
             text-stroke: 2px #111;
             text-shadow: none;
         }
@@ -299,7 +299,7 @@
                 margin-top: 0;
             }
             .hero-nav-subtitle {
-                font-family: 'PixelMplus10', 'Press Start 2P', monospace;
+                font-family: 'PixelMplus10', monospace !important;
                 font-size: 0.85rem;
                 margin-bottom: 8px;
                 margin-top: -2px;
