--- a/index.html
+++ b/index.html
@@ -100,8 +100,8 @@
             margin-bottom: 14px;
             margin-top: -6px;
             letter-spacing: 0.04em;
-            -webkit-text-stroke: 2px #111;
-            text-stroke: 2px #111;
+            -webkit-text-stroke: 0;
+            text-stroke: 0;
             text-shadow: none;
         }
         .main-links {
@@ -256,8 +256,6 @@
             .hero-nav-subtitle {
                 font-size: 1.2rem;
                 margin-bottom: 10px;
-                -webkit-text-stroke: 1.2px #111;
-                text-stroke: 1.2px #111;
             }
             .main-links a { font-size: 0.9rem; }
             .main-links .icon { width: 1.2em; height: 1.2em; }
@@ -303,8 +301,6 @@
                 font-size: 0.85rem;
                 margin-bottom: 8px;
                 margin-top: -2px;
-                -webkit-text-stroke: 1px #111;
-                text-stroke: 1px #111;
             }
             .main-links {
                 justify-content: flex-end;
