--- a/index.html
+++ b/index.html
@@ -70,6 +70,7 @@
             padding: 0;
             margin-right: 0;
         }
+        /* Remove .hero-nav-subtitle from this group! */
         .hero-nav-title, 
         .main-links a, 
         .footer-social-link, 
@@ -103,6 +104,7 @@
             -webkit-text-stroke: 0;
             text-stroke: 0;
             text-shadow: none;
+            font-weight: 400;
         }
         .main-links {
             display: flex;
