--- a/index.html
+++ b/index.html
@@ -592,13 +592,13 @@
           <img src="images/1 Joe Shenton - Respite.jpg" alt="After the War" class="hero-image">
         </div>
         <div class="hero-image-box" tabindex="0">
-          <img src="images/3 Joe Shenton - Reunion.jpg" alt="Ramen Battleship" class="hero-image">
+          <img src="images/fisherman wesbite.jpg" alt="Ramen Battleship" class="hero-image">
         </div>
         <div class="hero-image-box" tabindex="0">
           <img src="images/4 Joe Shenton - Reflection.jpg" alt="PTSD Machine" class="hero-image">
         </div>
         <div class="hero-image-box" tabindex="0">
-          <img src="images/2 Joe Shenton - Routine.jpg" alt="Transporter" class="hero-image">
+          <img src="images/wanderer website.jpg" alt="Transporter" class="hero-image">
         </div>
       </div>
       <div class="banner-images-spacing"></div>
