--- a/index.html
+++ b/index.html
@@ -592,7 +592,7 @@
           <img src="images/1 Joe Shenton - Respite.jpg" alt="After the War" class="hero-image">
         </div>
         <div class="hero-image-box" tabindex="0">
-          <img src="images/fisherman wesbite.jpg" alt="Ramen Battleship" class="hero-image">
+          <img src="images/fisherman website.jpg" alt="Ramen Battleship" class="hero-image">
         </div>
         <div class="hero-image-box" tabindex="0">
           <img src="images/4 Joe Shenton - Reflection.jpg" alt="PTSD Machine" class="hero-image">
