--- a/index.html
+++ b/index.html
@@ -589,13 +589,13 @@
       <!-- 4-IMAGE HERO ROW -->
       <div class="hero-image-row">
         <div class="hero-image-box" tabindex="0">
-          <img src="images/1 Joe Shenton - Respite.jpg" alt="After the War" class="hero-image">
+          <img src="images/walking temple website.jpg" alt="After the War" class="hero-image">
         </div>
         <div class="hero-image-box" tabindex="0">
           <img src="images/fisherman website.jpg" alt="Ramen Battleship" class="hero-image">
         </div>
         <div class="hero-image-box" tabindex="0">
-          <img src="images/4 Joe Shenton - Reflection.jpg" alt="PTSD Machine" class="hero-image">
+          <img src="images/the botanist a4 social.jpg" alt="PTSD Machine" class="hero-image">
         </div>
         <div class="hero-image-box" tabindex="0">
           <img src="images/wanderer website.jpg" alt="Transporter" class="hero-image">
