--- a/index.html
+++ b/index.html
@@ -5,16 +5,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- Add Press Start 2P Pixel Font -->
-    <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
-    <!-- Add PixelMplus10 Japanese Pixel Font -->
-    <link href="https://fonts.googleapis.com/css2?family=PixelMplus10&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&family=DotGothic16&display=swap" rel="stylesheet">
     <style>
         html, body {
             margin: 0;
             padding: 0;
             background: #FDEDF4;
             color: #222;
-            font-family: 'Press Start 2P', 'PixelMplus10', monospace;
+            font-family: 'Press Start 2P', 'DotGothic16', monospace;
             width: 100vw;
             overflow-x: hidden;
         }
@@ -70,7 +68,6 @@
             padding: 0;
             margin-right: 0;
         }
-        /* Remove .hero-nav-subtitle from this group! */
         .hero-nav-title, 
         .main-links a, 
         .footer-social-link, 
@@ -94,17 +91,17 @@
                 -1px -1px 0 #111;
         }
         .hero-nav-subtitle {
-            font-family: 'PixelMplus10', monospace !important;
+            font-family: 'DotGothic16', monospace !important;
             font-size: 2rem;
             color: #fff;
             text-align: right;
             margin-bottom: 14px;
             margin-top: -6px;
             letter-spacing: 0.04em;
+            font-weight: bold;
             -webkit-text-stroke: 0;
             text-stroke: 0;
             text-shadow: none;
-            font-weight: 400;
         }
         .main-links {
             display: flex;
@@ -299,7 +296,7 @@
                 margin-top: 0;
             }
             .hero-nav-subtitle {
-                font-family: 'PixelMplus10', monospace !important;
+                font-family: 'DotGothic16', monospace !important;
                 font-size: 0.85rem;
                 margin-bottom: 8px;
                 margin-top: -2px;
@@ -589,13 +586,13 @@
       <!-- 4-IMAGE HERO ROW -->
       <div class="hero-image-row">
         <div class="hero-image-box" tabindex="0">
-          <img src="images/walking temple website.jpg" alt="After the War" class="hero-image">
+          <img src="images/1 Joe Shenton - Respite.jpg" alt="After the War" class="hero-image">
         </div>
         <div class="hero-image-box" tabindex="0">
           <img src="images/fisherman website.jpg" alt="Ramen Battleship" class="hero-image">
         </div>
         <div class="hero-image-box" tabindex="0">
-          <img src="images/the botanist a4 social.jpg" alt="PTSD Machine" class="hero-image">
+          <img src="images/4 Joe Shenton - Reflection.jpg" alt="PTSD Machine" class="hero-image">
         </div>
         <div class="hero-image-box" tabindex="0">
           <img src="images/wanderer website.jpg" alt="Transporter" class="hero-image">
