--- a/index.html
+++ b/index.html
@@ -586,16 +586,16 @@
       <!-- 4-IMAGE HERO ROW -->
       <div class="hero-image-row">
         <div class="hero-image-box" tabindex="0">
-          <img src="images/1 Joe Shenton - Respite.jpg" alt="After the War" class="hero-image">
+          <img src="images/walking temple website.jpg" alt="After the War" class="hero-image">
         </div>
         <div class="hero-image-box" tabindex="0">
-          <img src="images/fisherman website.jpg" alt="Ramen Battleship" class="hero-image">
+          <img src="images/the botanist a4 website.jpg" alt="Ramen Battleship" class="hero-image">
         </div>
         <div class="hero-image-box" tabindex="0">
-          <img src="images/4 Joe Shenton - Reflection.jpg" alt="PTSD Machine" class="hero-image">
+          <img src="images/3 Joe Shenton - Reunion.jpg" alt="PTSD Machine" class="hero-image">
         </div>
         <div class="hero-image-box" tabindex="0">
-          <img src="images/wanderer website.jpg" alt="Transporter" class="hero-image">
+          <img src="images/5 Joe Shenton - Remnants.jpg" alt="Transporter" class="hero-image">
         </div>
       </div>
       <div class="banner-images-spacing"></div>
