--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <title>Lazy Toad Studios</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <!-- Add Press Start 2P Pixel Font -->
+    <!-- Add Press Start 2P Pixel Font and DotGothic16 -->
     <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&family=DotGothic16&display=swap" rel="stylesheet">
     <style>
         html, body {
@@ -92,16 +92,25 @@
         }
         .hero-nav-subtitle {
             font-family: 'DotGothic16', monospace !important;
-            font-size: 2rem;
+            font-size: 3.2rem;
+            font-weight: bold;
             color: #fff;
             text-align: right;
             margin-bottom: 14px;
             margin-top: -6px;
             letter-spacing: 0.04em;
-            font-weight: bold;
+            /* Black outline for pixel effect */
+            text-shadow:
+                -2px -2px 0 #000,
+                2px -2px 0 #000,
+                -2px 2px 0 #000,
+                2px 2px 0 #000,
+                0px -2px 0 #000,
+                0px 2px 0 #000,
+                -2px 0px 0 #000,
+                2px 0px 0 #000;
             -webkit-text-stroke: 0;
             text-stroke: 0;
-            text-shadow: none;
         }
         .main-links {
             display: flex;
@@ -300,6 +309,15 @@
                 font-size: 0.85rem;
                 margin-bottom: 8px;
                 margin-top: -2px;
+                text-shadow:
+                    -1px -1px 0 #000,
+                    1px -1px 0 #000,
+                    -1px 1px 0 #000,
+                    1px 1px 0 #000,
+                    0px -1px 0 #000,
+                    0px 1px 0 #000,
+                    -1px 0px 0 #000,
+                    1px 0px 0 #000;
             }
             .main-links {
                 justify-content: flex-end;
