--- a/index.html
+++ b/index.html
@@ -92,8 +92,8 @@
         }
         .hero-nav-subtitle {
             font-family: 'DotGothic16', monospace !important;
-            font-size: 3.2rem;
-            font-weight: bold;
+            font-size: 2.8rem;
+            font-weight: normal;
             color: #fff;
             text-align: right;
             margin-bottom: 14px;
