--- a/index.html
+++ b/index.html
@@ -92,8 +92,7 @@
         }
         .hero-nav-subtitle {
             font-family: 'DotGothic16', monospace !important;
-            font-size: 2.8rem;
-            font-weight: normal;
+            font-size: 2.2rem; /* Reduced from 3.2rem to 2.2rem */
             color: #fff;
             text-align: right;
             margin-bottom: 14px;
@@ -111,6 +110,7 @@
                 2px 0px 0 #000;
             -webkit-text-stroke: 0;
             text-stroke: 0;
+            font-weight: normal;
         }
         .main-links {
             display: flex;
@@ -799,6 +799,39 @@
         if(window.scrollY > window.innerHeight * 0.7) {
             document.getElementById('mainContent').classList.remove('hidden');
         }
+    });
+
+    // FROG SWAP SCRIPT
+    document.addEventListener("DOMContentLoaded", function() {
+        const subtitle = document.querySelector('.hero-nav-subtitle');
+        const frogImgSrc = 'images/toad icon static.png'; // <-- update path if needed
+        const originalText = subtitle.textContent.trim();
+        subtitle.innerHTML = '';
+
+        // Wrap each character in a span
+        for (const c of originalText) {
+            const span = document.createElement('span');
+            span.textContent = c;
+            subtitle.appendChild(span);
+        }
+        const spans = subtitle.querySelectorAll('span');
+
+        function randomDelay() {
+            return Math.floor(Math.random() * 20000) + 10000;
+        }
+        function doFrogSwap() {
+            const idx = Math.floor(Math.random() * spans.length);
+            const span = spans[idx];
+            const originalChar = span.textContent;
+            span.innerHTML = `<img src="${frogImgSrc}" alt="🐸" style="height:1em;vertical-align:middle;">`;
+
+            setTimeout(() => {
+                span.textContent = originalChar;
+                setTimeout(doFrogSwap, randomDelay());
+            }, 5000); // Show frog for 5 seconds
+        }
+
+        setTimeout(doFrogSwap, randomDelay());
     });
     </script>
 </body>
